--- a/CSS/estilo4.css
+++ b/CSS/estilo4.css
@@ -87,6 +87,8 @@ header{
 
 .gif-jungkook img {
   max-width: 250px;
+  height: 250px;
+  object-fit: cover; /* asegura que el gift no se recorte */
   border-radius: 10px;
   display: block;
   margin: 0 auto 15px auto;
